tests/src/frontend/typechecking/invalid/bind_pattern5.sk
base class Foo
class Bar extends Foo
class Baz extends Foo

fun makeFoo(): Foo {
  Baz()
}

fun main(): String {
  Bar() = makeFoo();
  _ = 42;
  "Fail"
}
